--- a/index.html
+++ b/index.html
@@ -2,16 +2,63 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="node_modules\bootstrap\dist\css\bootstrap.min.css">
+  <link rel="stylesheet" href=".\bootstrap.css">
   <title>Slayton Nichols</title>
 </head>
 <body>
-  <h1>Slayton Nichols Portfolio</h1>
+  <header class="jumbotron">
+    <div class="container">
+      <h1 class="head">Slayton Nichols Portfolio</h1>
+    </div>
+  </header>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <ul class="skills">
+          <li>Python</li>
+          <li>JavaScript</li>
+          <li>Node.JS</li>
+          <li>HTML5 & CSS3</li>
+          <li>Bootstrap</li>
+          <li>MongoDB</li>
+          <li>NativeScript</li>
+          <li>Angular.JS</li>
+        </ul>
+      </div>
+      <div class="col-sm">
+      <p class="aboutme">I am extremely proficient in HTML5, CSS3, and DevOps.
+        Building websites with responsive design and elegant features is something
+        I thoroughly enjoy. Building basic blogs and landing pages is a simple
+        task as well as web sites with more features such as, a shopping cart
+        and checkout, user accounts, forums, and more! <br> <br>
+        One of my favorite things is taking advantage of the power of scripting
+        languages like Python and JavaScript. If you would like a simple script
+        that just runs on the command line then I am sure I could put together
+        something that exceeds your expectations. I have experience building
+        Graphical User Interfaces to make it easier for users to interact with my
+        programs and love taking something from concept to finished product.<br><br>
+        One of my areas of expertise is Ecommerce, I have managed a multi million
+        dollar Amazon  Seller account and was instrumental in bringing its revenue
+        to 7 figures a year. I have built multiple applications for inventory
+        management, task automation, inventory and sales analysis, and scheduling
+        management. I understand what goes into managing an Ecommerce business
+        and how processes help achieve maximum efficiency.<br><br>
+        Over all I am a very hard working and detail oriented person and enjoy the
+        different jobs that freelancing provides. I look forward to invitations
+        for all different types of jobs and I am available 7 days a week so do not
+        hesitate to reach out!
+      </p>
+      </div>
+      <div class="col-sm">
+        <img id="Me" src="images\Slayton Nichols-7649.png" alt="Profile Image">
+      </div>
+    </div>
 
-
-
+  </div>
+<!--Scripts-->
 <script src="node_modules\bootstrap\dist\js\bootstrap.min.js"></script>
 <script src="node_modules\jquery\dist\jquery.min.js"></script>
 <script src="node_modules\tether\dist\js\tether.min.js"></script>
