--- a/index.html
+++ b/index.html
@@ -17,18 +17,9 @@
   <div class="container">
     <div class="row">
       <div class="col-sm">
-        <ul class="skills">
-          <li>Python</li>
-          <li>JavaScript</li>
-          <li>Node.JS</li>
-          <li>HTML5 & CSS3</li>
-          <li>Bootstrap</li>
-          <li>MongoDB</li>
-          <li>NativeScript</li>
-          <li>Angular.JS</li>
-        </ul>
+        <img id="Me" src="images\Slayton Nichols-7649.png" alt="Profile Image">
       </div>
-      <div class="col-sm">
+      <div class="col-sm-6">
       <p class="aboutme">I am extremely proficient in HTML5, CSS3, and DevOps.
         Building websites with responsive design and elegant features is something
         I thoroughly enjoy. Building basic blogs and landing pages is a simple
@@ -53,14 +44,23 @@
       </p>
       </div>
       <div class="col-sm">
-        <img id="Me" src="images\Slayton Nichols-7649.png" alt="Profile Image">
+        <ul class="skills">
+          <li>Python</li>
+          <li>JavaScript</li>
+          <li>Node.JS</li>
+          <li>HTML5 & CSS3</li>
+          <li>Bootstrap</li>
+          <li>MongoDB</li>
+          <li>NativeScript</li>
+          <li>Angular.JS</li>
+        </ul>
       </div>
     </div>
 
   </div>
 <!--Scripts-->
-<script src="node_modules\bootstrap\dist\js\bootstrap.min.js"></script>
 <script src="node_modules\jquery\dist\jquery.min.js"></script>
 <script src="node_modules\tether\dist\js\tether.min.js"></script>
+<script src="node_modules\bootstrap\dist\js\bootstrap.min.js"></script>
 </body>
 </html>
