--- a/index.html
+++ b/index.html
@@ -20,30 +20,32 @@
         <img id="Me" src="images\Slayton Nichols-7649.png" alt="Profile Image">
       </div>
       <div class="col-sm-6">
-      <p class="aboutme">I am extremely proficient in HTML5, CSS3, and DevOps.
-        Building websites with responsive design and elegant features is something
-        I thoroughly enjoy. Building basic blogs and landing pages is a simple
-        task as well as web sites with more features such as, a shopping cart
-        and checkout, user accounts, forums, and more! <br> <br>
-        One of my favorite things is taking advantage of the power of scripting
-        languages like Python and JavaScript. If you would like a simple script
-        that just runs on the command line then I am sure I could put together
-        something that exceeds your expectations. I have experience building
-        Graphical User Interfaces to make it easier for users to interact with my
-        programs and love taking something from concept to finished product.<br><br>
-        One of my areas of expertise is Ecommerce, I have managed a multi million
-        dollar Amazon  Seller account and was instrumental in bringing its revenue
-        to 7 figures a year. I have built multiple applications for inventory
-        management, task automation, inventory and sales analysis, and scheduling
-        management. I understand what goes into managing an Ecommerce business
-        and how processes help achieve maximum efficiency.<br><br>
-        Over all I am a very hard working and detail oriented person and enjoy the
-        different jobs that freelancing provides. I look forward to invitations
-        for all different types of jobs and I am available 7 days a week so do not
-        hesitate to reach out!
-      </p>
+        <h2 id="aboutme">A little about me</h2>
+        <p class="aboutme">I am extremely proficient in HTML5, CSS3, and DevOps.
+          Building websites with responsive design and elegant features is something
+          I thoroughly enjoy. Building basic blogs and landing pages is a simple
+          task as well as web sites with more features such as, a shopping cart
+          and checkout, user accounts, forums, and more! <br> <br>
+          One of my favorite things is taking advantage of the power of scripting
+          languages like Python and JavaScript. If you would like a simple script
+          that just runs on the command line then I am sure I could put together
+          something that exceeds your expectations. I have experience building
+          Graphical User Interfaces to make it easier for users to interact with my
+          programs and love taking something from concept to finished product.<br><br>
+          One of my areas of expertise is Ecommerce, I have managed a multi million
+          dollar Amazon  Seller account and was instrumental in bringing its revenue
+          to 7 figures a year. I have built multiple applications for inventory
+          management, task automation, inventory and sales analysis, and scheduling
+          management. I understand what goes into managing an Ecommerce business
+          and how processes help achieve maximum efficiency.<br><br>
+          Over all I am a very hard working and detail oriented person and enjoy the
+          different jobs that freelancing provides. I look forward to invitations
+          for all different types of jobs and I am available 7 days a week so do not
+          hesitate to reach out!
+        </p>
       </div>
       <div class="col-sm">
+        <h2 id="skills">Skills</h2>
         <ul class="skills">
           <li>Python</li>
           <li>JavaScript</li>
@@ -56,7 +58,30 @@
         </ul>
       </div>
     </div>
+  </div>
+  <div id="Projects" class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <h2 id="proj">Projects I am Proud of.</h2>
 
+
+      </div>
+      <div class="col-sm">
+        <h3 class="Autoscr">Automation Script</h3>
+
+
+      </div>
+      <div class="col-sm">
+        <h3 class="this">This Website!</h3>
+
+
+      </div>
+      <div class="col-sm">
+        <h3 class="new">New Project Here</h3>
+
+
+      </div>
+    </div>
   </div>
 <!--Scripts-->
 <script src="node_modules\jquery\dist\jquery.min.js"></script>
