Few edits made, Footer added, Project Images and contact info added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="jumbotron">
     <div class="container">
-      <h1 class="head">Slayton Nichols Portfolio</h1>
+      <h1 class="head">My Portfolio</h1>
     </div>
   </header>
   <div class="container">
@@ -20,7 +20,7 @@
         <img id="Me" src="images\Slayton Nichols-7649.png" alt="Profile Image">
       </div>
       <div class="col-sm-6">
-        <h2 id="aboutme">A little about me</h2>
+        <h2 id="aboutme">About me</h2>
         <p class="aboutme">I am extremely proficient in HTML5, CSS3, and DevOps.
           Building websites with responsive design and elegant features is something
           I thoroughly enjoy. Building basic blogs and landing pages is a simple
@@ -63,25 +63,40 @@
     <div class="row">
       <div class="col-sm-12">
         <h2 id="proj">Projects I am Proud of.</h2>
-
-
       </div>
       <div class="col-sm">
         <h3 class="Autoscr">Automation Script</h3>
-
-
+        <img id="auto" src="images\Screenshot (3).png" alt="Screenshot">
+        <p>This is a script that I built in Python for<br>
+        TQS Enterprises, a multi million
+        dollar ecommerce company.<br>
+        The GUI was coded with Tkinter and the
+        script<br> used Pyhtons Selenium module.<br>
+        <a href="https://github.com/SlaytonN/inventoryLab">Link to GitHub Repo</a></p>
       </div>
       <div class="col-sm">
         <h3 class="this">This Website!</h3>
-
-
+        <img id="website" src="images\Screenshot (2).png" alt="Website">
+        <p>This website was built using Bootstrap, HTML5, CSS3,<br>
+        JavaScript, and Node.JS.<br>
+        <a href="https://github.com/SlaytonN/Portfolio">Link to GitHub Repo</a></p>
       </div>
-      <div class="col-sm">
+      <!--<div class="col-sm">
         <h3 class="new">New Project Here</h3>
-
-
-      </div>
+      </div>-->
     </div>
+  </div>
+  <div class="container">
+    <footer class="jumbotron">
+      <div class="row">
+        <ul class="contact">
+          <li><a href="mailto:nicholsslayton@gmail.com">nicholsslayton@gmail.com</a></li>
+          <li><a href="tel:1-706-897-7149">+1(706)-897-7149</a></li>
+          <li><a href="https://www.linkedin.com/in/slayton-nichols-6872b1149/"><img src="images\In-2CRev-34px-R.png" alt="LinkedIn"></a></li>
+          <li><a href="https://github.com/SlaytonN"><img src="images\GitHub-Mark-32px.png" alt="GitHub"></a></li>
+        </ul>
+      </div>
+    </footer>
   </div>
 <!--Scripts-->
 <script src="node_modules\jquery\dist\jquery.min.js"></script>
